<resources>
    <string name="app_name">Network Fiber Optic Basic</string>
    <string name="content1">เส้นใยแก้วนำแสง คือ เส้นใยขนาดเล็กที่ทำหน้าที่เป็นตัวนำแสง  โครงสร้างของเส้นใยแสงประกอบด้วยส่วนที่แสงเดินทางผ่านเรียกว่า CORE และส่วนที่หุ้มCORE อยู่เรียกว่า CLAD ทั้ง CORE
และ CLAD เป็นDIELECTRIC ใส 2 ชนิด
(DIELECTRIC หมายถึงสารที่ไม่เป็นตัวนำไฟฟ้า เช่น แก้ว พลาสติก) โดยการทำให้ค่าดัชนีการหักเหของ CLAD มีค่าน้อยกว่าค่าดัชนีการหักเหของCOER
เล็กน้อยประมาณ 0.2 ~3% และอาศัยปรากฎการณ์สะท้อนกลับหมดของแสง สามารถทำให้แสงที่ป้อนเข้าไปใน CORE เดินทางไปได้นอกจากนั้นเนื่องกล่าวกันว่าเส้นใยแสงมีขนาดเล็กมากขนาดเท่าเส้นผมนั้นหมายถึง ขนาดของเส้นผ่าศูนย์กลางด้านนอกของ  CLAD
    ซึ่งมีขนาดประมาณ 0.1 ม.ม. ส่วน CORE
ที่แสงเดินทาง นั้นมีขนาดเล็กลงไปอีกคือประมาณหลาย
    um ~ หลายสิบ um  (1 um=10-3mm) ซึ่งมีค่าหลายเท่าของความยาวคลื่นของแสงที่ใช้งาน
ค่าต่างๆ เหล่านี้เป็นค่าที่กำหนดขึ้นจากคุณสมบัติการส่งและคุณสมบัติทางเมคานิกส์ที่ต้องการ
        เส้นใยแสงนอกจากมีคุณสมบัติการส่งดีเยี่ยมแล้วยังมีลักษณะเด่นอย่างอื่นอีกเช่น ขนาดเล็กน้ำหนักเบาอีกด้วย</string>

    <string name="content2_1">Optical Fiber</string>
    <string name="content2_2">ประกอบขึ้นมาจาก</string>
    <string name="content2_3">1. แก้ว (Glass Optical Fiber)</string>
    <string name="content2_4">2. พลาสติก (Plastic Optical Fiber)</string>
    <string name="content2_5">3. พลาสติกผสมแก้ว (Plastic Clad Silica ,PCS)</string>
    <string name="content2_6">ความรู้ด้าน FIBER OPTIC</string>
    <string name="content2_7"> ความต้องการในการขนส่งข้อมูลที่ความเร็วสูงขึ้นและระยะทางที่ไกลขึ้น  นำไปสู่การ
        พัฒนาเทคโนโลยีใหม่ ๆ  การใช้ photons แทน electrons สำหรับการรับส่งสัญญาณ ผ่านเคเบิ้ล
        ทำให้ได้แบนด์วิดธ์ที่สูงขึ้นแต่ราคาต่ำลงอย่าง ไรก็ตาม แนวคิดในการส่ง ข่าวสาร โดยใช้แสงไม่ใช่ของใหม่  เพียงแต่ในทศวรรษหลังสุดนี้ สามารถที่จะนำวัสดุ
         และอุปกรณ์ ทางแสงมาให้ใช้ประโยชน์ได้ ต่อไป</string>
    <string name="content3_1">1 Step index fiber (singlemode)</string>
    <string name="content3_2">ชนิด step index fiber ส่วน core และ cladding มีดัชนีการหักเหที่ต่างกัน  ไฟเบอร์ชนิด single-mode มีขนาดของ core เล็กมาก ( 10 GHz·km)
จึงไม่เกิดการกว้างขึ้นของพัลส์ (pulse broadening) และไม่เกิด transit time differences</string>
    <string name="content3_3">2 Step index fiber (multimode)</string>
    <string name="content3_4">Multimode Fiber
ไฟเบอร์แบบมัลติโหมดมีขนาดเส้นผ่าศูนย์กลางใหญ่ (> 100 µm) ไฟเบอร์แบบนี้จะยอมให้การแพร่ของแสงแบบ multiple mode ผ่านไปได้  ทำให้มีการลดทอนที่สูงและมีแบนด์วิดธ์ที่ต่ำกว่า ( 100 MHz·km) ส่งผลให้เกิดการกว้างขึ้นของพัลส์และเกิด transit time differences
ซึ่งจะเหมาะสมสำหรับการใช้งานกับระบบ LAN (>300 m)</string>
    <string name="content3_5">3 Graded index fiber (multimode)</string>
    <string name="content3_6">FIBER OPTIC เส้นใยแก้วนำแสง คือ เส้นใยขนาดเล็กที่ทำหน้าที่เป็นตัวนำแสง  โครงสร้างของเส้นใยแสงประกอบด้วยส่วนที่แสงเดินทางผ่านเรียกว่า CORE และส่วนที่หุ้มCORE อยู่เรียกว่า CLAD ทั้ง CORE และ CLAD เป็นDIELECTRIC ใส 2 ชนิด (DIELECTRIC หมายถึงสารที่ไม่เป็นตัวนำไฟฟ้า เช่น แก้ว พลาสติก) โดยการทำให้ค่าดัชนีการหักเหของ CLAD มีค่าน้อยกว่าค่าดัชนีการหักเหของCOER เล็กน้อยประมาณ 0.2 ~3% และอาศัยปรากฎการณ์สะท้อนกลับหมดของแสง สามารถทำให้แสงที่ป้อนเข้าไปใน CORE เดินทางไปได้นอกจากนั้นเนื่องกล่าวกันว่าเส้นใยแสงมีขนาดเล็กมากขนาดเท่าเส้นผมนั้นหมายถึง ขนาดของเส้นผ่าศูนย์กลางด้านนอกของ  CLAD ซึ่งมีขนาดประมาณ 0.1 ม.ม. ส่วน CORE ที่แสงเดินทางผ่าน นั้นมีขนาดเล็กลงไปอีกคือประมาณหลาย um ~ หลายสิบ um  (1 um=10-3mm) ซึ่งมีค่าหลายเท่าของความยาวคลื่นของแสงที่ใช้งาน ค่าต่างๆ เหล่านี้เป็นค่าที่กำหนดขึ้นจากคุณสมบัติการส่งและคุณสมบัติทางเมคานิกส์ที่ต้องการ เส้นใยแสงนอกจากมีคุณสมบัติการส่งดีเยี่ยมแล้วยังมีลักษณะเด่นอย่างอื่นอีกเช่น ขนาดเล็กน้ำหนักเบาอีกด้วย
</string>

    <string name="contentspli_1">FSM-60S เป็นเครื่องเชื่อมต่อสายใยแก้วนำแสงรุ่นใหม่ล่าสุด ที่มีการวัดวางแนวสายแบบ core to core พร้อมทั้งเป็นมิตรกับสิ่งแวดล้อม อีกทั้ง FSM-60S
รุ่นใหม่ล่าสุดนี้ยังเป็นเครื่องเชื่อมสายใยแก้วนำแสงที่ทนทานและไว้วางใจได้ ผ่านการพิสูจน์แล้วว่าสามารถทนทานต่อฝุ่น,ฝน,แรงสั่งสะเทือนและสามารถรองรับแรงกระแทกจากที่สูง 76 ซม. ได้
FSM-60S สามารถเชื่อมต่อสายใยแก้วได้ในเวลา 9 วินาที และอบ sleeve ขนาด 60 มม. ได้ในเวลา 30 วินาที เวลารวมทั้งหมดที่ใช้ในการดำเนินการเพียง 39วินาทีเท่านั้น FSM-60Sรุ่นนี้ยังมีจุดเด่นใหม่ ๆ อีกเช่น Auto Heater, Fiber Holder or Sheath Clamp System,หน้าจอปรับ 2 ทิศทางอัตโนมัติ สามารถชาร์จแบตเตอรี่พร้อมกับเชื่อมต่อสายไฟเบอร์ในเวลาเดียวกัน

คุณสามารถดาวน์โหลดข้อมูลการเชื่อมต่อจากเครื่องFSM-60S ไปยังคอมพิวเตอร์ได้ อีกทั้งยังสามารถดาวน์โหลดซอฟต์แวร์ใหม่ๆผ่านทางอินเตอร์เน็ตและควบคุมการทำงานและการเชื่อมต่อในเครื่อง FSM-60S ผ่านคอมพิวเตอร์ได้</string>

    <string name="content4_3">OTDR ไม่เพียงแต่จะรับสัญญาณจาก Event ต่าง ๆ เพียงอย่างเดียว  แต่ยังรับสัญญาณที่เกิดจากตัวไฟเบอร์เอง (fiber itself) ด้วย  ในขณะที่แสงเดินทางไปในไฟเบอร์  แสงจะถูดลดทอนด้วย Rayleigh scattering การลดทอนนี้เป็นเหตุให้เกิดการเปลี่ยนแปลงเล็กน้อยในดัชนีการหักเหของแก้ว  บางทีแสงจะแตกกระจายโดยตรง (scattered directly) ไปยัง OTDR ซึ่งเรียกกันว่า backscatter
สัมประสิทธ์การแตกกระจาย (scatter coefficient) คือการวัดปริมาณของแสงที่มีการแตกกระจายกลับ (scattered back) ในไฟเบอร์  การแตกกระจายกลับจะมีผลกระทบต่อการวัดค่า return loss และค่าของการสะท้อนกลับ (reflectance)
สัมประสิทธ์การแตกกระจาย (scatter coefficient) ถูกคำนวณจากอัตราส่วนของ optical pulse power (not energy) ที่เอาท์พุทของ OTDR ต่อ backscatter power ณ ตำแหน่งที่ใกล้กับจุดเริ่มต้นของไฟเบอร์ อัตราส่วนนี้ถูกแสดงเป็น dB และสัดส่วนผกผันของ pulse width เพราะ optical pulse width ไม่ขึ้นกับ pulse width
ค่าที่เป็นแบบฉบับ (typical value) ประมาณ 50 dB สำหรับ pulse width ขนาด 1 ?s (ขึ้นอยู่กับ wavelength และชนิดของไฟเบอร์)</string>
    <string name="content5_5">ใยแก้วนำแสง หรือ ออปติกไฟเบอร์ หรือ ไฟเบอร์ออปติก เป็นแก้วหรือพลาสติกคุณภาพสูง ยืดหยุ่นโค้งงอได้ เส้นผ่านศูนย์กลางเพียง 8-10 ไมครอน
        (10 ไมครอน = 10 ในล้านส่วนของเมตร =10x10^-6=0.00001 เมตร = 0.01 มม.) เล็กกว่าเส้นผมที่มีขนาด 40-120 ไมครอน, กระดาษ 100 ไมครอน
        ใยแก้วนำแสงทำหน้าที่เป็นตัวกลางในการส่งแสงจากด้านหนึ่งไปอีกด้านหนึ่ง ด้วยความเร็วเกือบเท่าแสง เมื่อนำมาใช้ในการสื่อสารโทรคมนาคม ทำให้สามารถส่ง-รับข้อมูลได้เร็วมาก
        ได้ระยะทางได้เกิน 100 กม.ในหนึ่งช่วง และเนื่องจากแสงเป็นตัวนำส่งข้อมูล ทำให้สัญญาณแม่เหล็กไฟฟ้าภายนอก ไม่สามารถรบกวนความชัดเจนของข้อมูลได้
        ใยแก้วนำแสงจึงถูกนำมาใช้แทนตัวกลางอื่นๆในการส่งข้อมูล อีกทั้งยังเป็นเส้นใยขนาดเล็กที่ทำหน้าที่เป็นตัวนำแสง โครงสร้างของเส้นใยแสงประกอบด้วยส่วนที่แสงเดินทางผ่านเรียกว่า CORE
        และส่วนที่หุ้มCORE อยู่เรียกว่า CLAD ทั้ง CORE และ CLAD เป็นDIELECTRIC ใส 2 ชนิด (DIELECTRIC หมายถึงสารที่ไม่เป็นตัวนำไฟฟ้า เช่น แก้ว พลาสติก) โดยการทำให้ค่าดัชนีการหักเหของ CLAD มีค่าน้อยกว่าค่าดัชนีการหักเหของ COER
        เล็กน้อยประมาณ 0.2 ~3% และอาศัยปรากฎการณ์สะท้อนกลับหมดของแสง สามารถทำให้แสงที่ป้อนเข้าไปใน CORE เดินทางไปได้นอกจากนั้นเนื่องกล่าวกันว่าเส้นใยแสงมีขนาดเล็กมากขนาดเท่าเส้นผมนั้นหมายถึง ขนาดของเส้นผ่าศูนย์กลางด้านนอกของ CLAD ซึ่งมีขนาดประมาณ 0.1 ม.ม. ส่วน CORE ที่แสงเดินทางผ่าน นั้นมีขนาดเล็กลงไปอีกคือประมาณหลาย um ~ หลายสิบ um (1 um=10-3mm) ซึ่งมีค่าหลายเท่าของความยาวคลื่นของแสงที่ใช้งาน ค่าต่างๆ เหล่านี้เป็นค่าที่กำหนดขึ้นจากคุณสมบัติการส่งและคุณสมบัติทางเมคานิกส์ที่ต้องการ เส้นใยแสงนอกจากมีคุณสมบัติการส่งดีเยี่ยมแล้วยังมีลักษณะเด่นอย่างอื่นอีกเช่น ขนาดเล็กน้ำหนักเบาอีกด้วย</string>
</resources>
